# commute-weather-self-mlops

./: .dockerignore  .env.production  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.production  airflow.cfg  app_mlops.py  docker-compose.production.yml  docker-compose.training.yml  docker-compose.yml  kma_feature_mapping_report.md  mlruns.db  nginx.conf  pyproject.toml  requirements.txt  setup.py
dags/: batch_prediction_dag.py  data_collection_dag.py  model_training_dag.py  monitoring_dag.py
docs/: AIRFLOW_SETUP.md  MLOps_System_Guide.md  ci_cd_plan.md  data_pipeline_spec.md  mlops_architecture.md  wandb_integration.md
scripts/: deploy.sh  deploy_mlops.py  docker_setup.py  initialize_mlops.py  run_enhanced_training.py  run_performance_monitor.py  run_realtime_mlops.py  run_training_scheduler.py  setup_wandb.py  simple_docker_test.py  simple_feature_test.py  test_cold_start_pipeline.py  test_feature_engineering.py  test_realtime_training.py  validate_kma_features.py
src/commute_weather/: storage.py
src/commute_weather/data/: bootstrap_data_generator.py  training_data_manager.py
src/commute_weather/data_quality/: __init__.py  validators.py
src/commute_weather/data_sources/: asos_collector.py
src/commute_weather/deployment/: model_deployer.py
src/commute_weather/evaluation/: __init__.py  model_evaluator.py
src/commute_weather/features/: __init__.py  base.py  feature_engineering.py  intelligent_features.py  weather_features.py
src/commute_weather/ml/: __init__.py  enhanced_training.py  mlflow_integration.py  (+1 more)
test_mlruns/684928457309897534/: meta.yaml
(+85 files in other folders)
