[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commute-weather"
version = "0.1.0"
description = "Baseline commute comfort scoring project"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "pandas>=2.1",
    "pyarrow>=14.0",
    "prefect>=2.14",
    "scikit-learn>=1.3",
    "mlflow>=2.9",
    "boto3>=1.28",
    "s3fs>=2023.9",
    "wandb>=0.16",
    "schedule>=1.2",
    "python-dotenv>=1.0",
    "psutil>=5.9",
    "pytz>=2023.3",
    "numpy>=1.24",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra"
testpaths = ["tests"]
pythonpath = ["src"]
